# phone-whisper

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
app/src/main/kotlin/com/k2fsa/sherpa/onnx/: OfflineRecognizer.kt
app/src/main/kotlin/com/kafkasl/phonewhisper/: LocalTranscriber.kt  ModelDownloader.kt  WhisperAccessibilityService.kt
app/src/test/kotlin/com/kafkasl/phonewhisper/: ModelDownloaderTest.kt
scripts/: export_wav2vec2_onnx.py  push_model.sh
